Pull request #451: Jdzubak MCA-4157 raw msg event
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4157-raw-msg-event to master

Squashed commit of the following:

commit b39313727bff700c7f7f8026122389392b01fe08
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Sep 25 12:58:08 2024 +0200

    MCA-4173 Gradle JVM args updated to Java 17 supported args

commit 34d3974d8fd681c5b82a2dd6d1e1f53a33336d8c
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Sep 24 14:33:03 2024 +0200

    MCA-4173 new callback onChatRawMessageReceived() in InAppChatEventsListener, InAppChat interface allows to set events listener

commit 643688cbf046d7927f81dbc63c93843a7ad1deb6
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Sep 24 09:07:15 2024 +0200

    MCA-4173 Raw msg even not finished

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -58,6 +58,12 @@
             }
         });
 
+        window.addEventListener('message', (event) => {
+            if (event.data.destination === 'viewChange') {
+                InAppChatMobile.onViewChanged(event.data.view);
+            }
+        });
+
         // If all is OK -> initialize widget, enable native controls and show widget
         function init() {
             if (domain != null) {
@@ -71,13 +77,15 @@
                     setTheme(widgetTheme);
                 }
             });
+            addLiveChatEventsListener();
         }
 
-        window.addEventListener('message', (event) => {
-            if (event.data.destination === 'viewChange') {
-                InAppChatMobile.onViewChanged(event.data.view);
-            }
-        })
+        function addLiveChatEventsListener() {
+            const liveChatSDK = new LiveChatSDK();
+            liveChatSDK.on('messageReceived', (payload) => {
+                InAppChatMobile.onRawMessageReceived(stringify(payload));
+            });
+        }
 
         //Widget API
         function sendMessage(message) {
@@ -141,19 +149,29 @@
             return !value?.toString().trim()
         }
 
+        function stringify(value) {
+            switch (typeof value) {
+                case 'string': case 'object': return JSON.stringify(value);
+                default: return String(value);
+            }
+        };
+
         function widgetApiCallback(name, error, result) {
             if (error) {
-                if (error !== null && (typeof error === 'object' || Array.isArray(error))) {
-                    InAppChatMobile.onWidgetApiError(name, JSON.stringify(error));
+                if (error === undefined || error === null) {
+                    InAppChatMobile.onWidgetApiError(name, null);
                 } else {
-                    InAppChatMobile.onWidgetApiError(name, error);
+                    InAppChatMobile.onWidgetApiError(name, stringify(error));
                 }
-            } else if (result === undefined) {
-                InAppChatMobile.onWidgetApiSuccess(name, null);
             } else {
-                InAppChatMobile.onWidgetApiSuccess(name, result);
+                if (result === undefined || result === null) {
+                    InAppChatMobile.onWidgetApiSuccess(name, null);
+                } else {
+                    InAppChatMobile.onWidgetApiSuccess(name, stringify(result));
+                }
             }
         }
+
     </script>
 </body>
 
