Pull request #477: Jdzubak MCA-4328 lc widget uri injection
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4328-lc-widget-uri-injection to master

Squashed commit of the following:

commit d8f8d06a42b6e483d52b4ff429802022926bdf5e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jan 31 15:23:00 2025 +0100

    MCA-4441 Jenkins job can inject Livechat Widget URI now. Gradle deprecated syntax updated.

commit 52d9ac841f0550a9b55b84cdc7c375bf14905924
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jan 31 15:17:05 2025 +0100

    MCA-4441 Jenkins job can inject Livechat Widget URI now. Gradle deprecated syntax updated.

commit cd9be5299281d8b27e43fe429100dd293a9f6a48
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jan 31 15:17:05 2025 +0100

    Rename .java to .kt

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -17,15 +17,24 @@
 <body>
     <div id="ib-widget-container"></div>
     <script>
+        const widgetUri = getQueryParameter('widgetUri');
         const domain = getQueryParameter('domain');
         const jwt = getQueryParameter('jwt');
         const pushRegId = getQueryParameter('pushRegId');
         const widgetId = getQueryParameter('widgetId');
         const widgetTheme = getQueryParameter('widgetTheme');
 
-        let widgetAddress = 'https://livechat.infobip.com/widget.js';
+        let uri = 'https://livechat.infobip.com/widget.js';
+
+        let decodedWidgetUri = null;
+        if (!isNullOrBlank(widgetUri)) {
+            decodedWidgetUri = decodeURIComponent(widgetUri);
+        }
+
         if (!isNullOrBlank(domain)) {
-            widgetAddress = `https://livechat-${domain.toLocaleLowerCase()}.infobip.com/widget.js`;
+            uri = `https://livechat-${domain.toLocaleLowerCase()}.infobip.com/widget.js`;
+        } else if (!isNullOrBlank(decodedWidgetUri)) {
+            uri = decodedWidgetUri;
         }
 
         (function (I, n, f, o, b, i, p) {
@@ -33,7 +42,7 @@
             I[b].t = 1 * new Date(); i = n.createElement(f); i.async = 1; i.src = o;
             p = n.getElementsByTagName(f)[0]; p.parentNode.insertBefore(i, p)
         })
-            (window, document, 'script', widgetAddress, 'liveChat');
+            (window, document, 'script', uri, 'liveChat');
 
         // Override widget config
         liveChat('config', {
