Pull request #480: Jdzubak MCA-4450 Livechat Widget API
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4450_lc_widget_api to master

Squashed commit of the following:

commit e9f9cb06964f63607df3f4945f994ab1048f4b43
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 11 14:09:13 2025 +0100

    MCA-4477 Review fixes

commit ce2c94e77f05e07d1b23db11a81b9df387bd264e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 10 15:06:02 2025 +0100

    MCA-4477 Few improvements

commit f285f6813ffc506a339fef61583ac41b71029ac1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 10 14:01:12 2025 +0100

    MCA-4477 Null safe

commit a1590d5862a888cd23d0db6f545b92291d738562
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Mar 7 16:17:43 2025 +0100

    MCA-4477 Little update

commit 57f278c19861bb4c1ef5553ce6066847d8dfc374
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Mar 7 10:18:02 2025 +0100

    MCA-4450 Doco review updates

commit 1d8d1f04d349b6de94f1859f80a50d53d1a59bc3
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 5 16:34:42 2025 +0100

    MCA-4450 Little updates

commit ceb1c087bb1f25adcfcde21b7edfa7d60fe4f0a7
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 5 14:43:20 2025 +0100

    MCA-4478 LivechatWidgetApi used in InAppChatView. InAppChat language refactored. Deprecation of various InAppChat related functions. Gradle dependencies versions synced across modules.

commit 35a0c20b3dfff16d71d0cf32d3f0bc2752e55206
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 3 15:35:20 2025 +0100

    MCA-4477 Livechat Widget layer logically separated from InAppChat. LivechatWidgetApi implementation.

commit 91958d65d9d0b34930c91d14e250bf677c515d65
Merge: 342ae368 64e938e3
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Feb 25 11:25:59 2025 +0100

    Merge remote-tracking branch 'refs/remotes/origin/master' into jdzubak-MCA-4432-lc-widget-api-poc



--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -45,41 +45,51 @@
             (window, document, 'script', uri, 'liveChat');
 
         // Override widget config
-        liveChat('config', {
+        const widgetConfig = {
             widgetId: widgetId,
             container: document.getElementById('ib-widget-container'),
             showHeader: false,
             showFooter: false,
             showFab: false
-        }, (error, result) => widgetApiCallback('config', error, result));
+        };
+        liveChat('config', widgetConfig, function (error, result) {
+            widgetApiCallback('config', error, result);
+            if (!error) {
+                identify();
+            }
+        });
 
         // Try identify user by pushRegId and (optional) jwt
-        let inputParams = {
-            'pushRegistrationId': pushRegId,
-        };
-        if (jwt != null) {
-            inputParams.jwt = jwt;
+        function identify() {
+            const inputParams = {
+                'pushRegistrationId': pushRegId,
+            };
+            if (jwt != null) {
+                inputParams.jwt = jwt;
+            }
+            liveChat('identify', inputParams, function (error, result) {
+                widgetApiCallback('identify', error, result);
+                if (!error) {
+                    init();
+                }
+            });
         }
-        liveChat('identify', inputParams, function (error, result) {
-            widgetApiCallback('identify', error, result);
-            if (!error) {
-                init();
-            }
-        });
-
-        window.addEventListener('message', (event) => {
-            if (event.data.destination === 'viewChange') {
-                InAppChatMobile.onViewChanged(event.data.view);
-            }
-        });
 
         // If all is OK -> initialize widget, enable native controls and show widget
         function init() {
+            let initParams = null;
             if (domain != null) {
-                liveChat('init', { widgetId: widgetId, domain: domain }, (error, result) => widgetApiCallback('init_chat', error, result));
-            } else {
-                liveChat('init', null, (error, result) => widgetApiCallback('init_chat', error, result));
+                initParams = { widgetId: widgetId, domain: domain };
             }
+            liveChat('init', initParams, function (error, result) {
+                widgetApiCallback('initWidget', error, result);
+                if(!error) {
+                   show();
+                }
+            });
+        }
+
+        function show() {
             liveChat('show', null, function (error, result) {
                 widgetApiCallback('show', error, result);
                 if (!error && widgetTheme != null) {
@@ -88,6 +98,12 @@
             });
             addLiveChatEventsListener();
         }
+
+        window.addEventListener('message', (event) => {
+            if (event.data.destination === 'viewChange') {
+                InAppChatMobile.onViewChanged(event.data.view);
+            }
+        });
 
         function addLiveChatEventsListener() {
             const liveChatSDK = new LiveChatSDK();
@@ -98,7 +114,7 @@
 
         //Widget API
         function sendMessage(message) {
-            liveChat('send', message, (error, result) => widgetApiCallback('send_message', error, message));
+            liveChat('send', message, (error, result) => widgetApiCallback('sendMessage', error, message));
         }
 
         function sendMessageWithAttachment(message, attachment, fileName) {
@@ -107,22 +123,22 @@
                 'attachment': attachment,
                 'fileName': fileName,
                 'type': 'BASIC'
-            }, (error, result) => widgetApiCallback('send_message_with_attachment', error, message));
+            }, (error, result) => widgetApiCallback('sendMessageWithAttachment', error, message));
         }
 
         function sendDraft(draft) {
             liveChat('send', {
                 'message': draft,
                 'type': 'DRAFT'
-            }, (error, result) => widgetApiCallback('send_draft', error, draft));
+            }, (error, result) => widgetApiCallback('sendDraft', error, draft));
         }
 
         function showThreadList() {
-            liveChat('show_thread_list', null, (error, result) => widgetApiCallback('show_thread_list', error, result));
+            liveChat('show_thread_list', null, (error, result) => widgetApiCallback('showThreadList', error, result));
         }
 
         function setLanguage(language) {
-            liveChat('set_language', language, (error, result) => widgetApiCallback('set_language', error, language));
+            liveChat('set_language', language, (error, result) => widgetApiCallback('setLanguage', error, language));
         }
 
         function sendContextualData(data, strategy) {
@@ -132,20 +148,20 @@
                     metadata: data,
                     multiThreadStrategy: strategy
                 },
-                (error, result) => widgetApiCallback('send_contextual_data', error, result)
+                (error, result) => widgetApiCallback('sendContextualData', error, result)
             );
         }
 
-        function mobileChatPause() {
-            liveChat('mobile_chat_pause', null, (error, result) => widgetApiCallback('mobile_chat_pause', error, result));
+        function pauseConnection() {
+            liveChat('mobile_chat_pause', null, (error, result) => widgetApiCallback('pauseConnection', error, result));
         }
 
-        function mobileChatResume() {
-            liveChat('mobile_chat_resume', null, (error, result) => widgetApiCallback('mobile_chat_resume', error, result));
+        function resumeConnection() {
+            liveChat('mobile_chat_resume', null, (error, result) => widgetApiCallback('resumeConnection', error, result));
         }
 
         function setTheme(theme) {
-            liveChat('set_theme', theme, (error, result) => widgetApiCallback('set_theme', error, result));
+            liveChat('set_theme', theme, (error, result) => widgetApiCallback('setTheme', error, result));
         }
 
         function getQueryParameter(name) {
