Pull request #496: MCA-4525 Updated createThread() response
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4525-thread-response to master

Squashed commit of the following:

commit e96648ce04666556ea411992387358a6553a9550
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 9 13:35:22 2025 +0200

    MCA-4525 Update

commit 7ba17de782ff7236e95f115d70a0b30948f19a0d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 9 13:13:50 2025 +0200

    MCA-4525 Updated createThread() response

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -158,6 +158,22 @@
                     let responseData = response.data;
                     if (responseData == null) {
                         responseData = validPayload;
+                        for (let attempt = 1; attempt <= 3; attempt++) {
+                            try {
+                                const activeThreadResponse = await getLivechatSdk().getActiveThread();
+                                if (activeThreadResponse && activeThreadResponse.success && activeThreadResponse.data) {
+                                    responseData = {
+                                        ...responseData,
+                                        thread: activeThreadResponse.data
+                                    };
+                                    break;
+                                } else {
+                                    await new Promise(resolve => setTimeout(resolve, 300));
+                                }
+                            } catch (e) {
+                                console.log(`Attempt ${attempt}: Could not get active thread - ${e.message}`);
+                            }
+                        }
                     }
                     widgetApiCallback('createThread', null, responseData);
                 } else {
@@ -234,7 +250,7 @@
                     widgetApiCallback('getActiveThread', response.error, null);
                 }
             } catch (e) {
-                widgetApiCallback('getActiveThread', `Could not show thread ${e.message}`, null);
+                widgetApiCallback('getActiveThread', `Could not get active thread ${e.message}`, null);
             }
         }
 
