Pull request #500: Jdzubak MCA-4633 widget config update
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4633-widget-config-update to master

Squashed commit of the following:

commit 1b57b67a82c79129170eddde78e715086e1743b3
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon May 19 15:24:02 2025 +0200

    MCA-4633 Fixed setLanguage() issues with double loading

commit a8ed9f08b907dbeab5a2d3468b83fbf2a261f1b4
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 16 14:54:00 2025 +0200

    MCA-4633 Small change

commit 3584e0690933546865d53603713fe9592a30c39a
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 16 09:54:10 2025 +0200

    MCA-4667 Small update

commit a681973e50325e66ea84494c75a3ab2a424a2ff2
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 16 09:50:58 2025 +0200

    MCA-4667 Small update

commit b6a4599d61ca17633f8607b06c9c8423eab05957
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 16 09:36:33 2025 +0200

    MCA-4633 LivechatWidgetApi - Added option to control loading timeout

commit e8e117c55e3c1bef8713c52e8f97fb51b03e0446
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri May 16 08:52:52 2025 +0200

    MCA-4667 WidgetInfo updated, removed old deprecated customization option

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -23,6 +23,7 @@
         const pushRegId = getQueryParameter('pushRegId');
         const widgetId = getQueryParameter('widgetId');
         const widgetTheme = getQueryParameter('widgetTheme');
+        const language = getQueryParameter('language');
 
         let uri = 'https://livechat.infobip.com/widget.js';
         let livechatSdk = null;
@@ -84,6 +85,9 @@
                     show();
                 }
             };
+            if (!isNullOrBlank(language)) {
+                setLanguage(language);
+            }
             if (domain != null) {
                 liveChat('init', { widgetId: widgetId, domain: domain }, callback);
             } else {
