--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -141,11 +141,7 @@
                 const validPayload = getValidMessagePayload(payload, threadId);
                 const response = await getLivechatSdk().sendMessage(validPayload);
                 if (response.success) {
-                    let responseData = response.data;
-                    if (responseData == null) {
-                        responseData = validPayload;
-                    }
-                    widgetApiCallback('sendMessage', null, responseData);
+                    widgetApiCallback('sendMessage', null, response.data);
                 } else {
                     widgetApiCallback('sendMessage', response.error, null);
                 }
@@ -159,27 +155,7 @@
                 const validPayload = getValidMessagePayload(initialMessagePayload);
                 const response = await getLivechatSdk().createThread(validPayload);
                 if (response.success) {
-                    let responseData = response.data;
-                    if (responseData == null) {
-                        responseData = validPayload;
-                        for (let attempt = 1; attempt <= 3; attempt++) {
-                            try {
-                                const activeThreadResponse = await getLivechatSdk().getActiveThread();
-                                if (activeThreadResponse && activeThreadResponse.success && activeThreadResponse.data) {
-                                    responseData = {
-                                        ...responseData,
-                                        thread: activeThreadResponse.data
-                                    };
-                                    break;
-                                } else {
-                                    await new Promise(resolve => setTimeout(resolve, 300));
-                                }
-                            } catch (e) {
-                                console.log(`Attempt ${attempt}: Could not get active thread - ${e.message}`);
-                            }
-                        }
-                    }
-                    widgetApiCallback('createThread', null, responseData);
+                    widgetApiCallback('createThread', null, response.data);
                 } else {
                     widgetApiCallback('createThread', response.error, null);
                 }
