Pull request #506: MCA-4763 Added new internal openNewThread() function + bugfixing
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4736-start-new-thread to master

Squashed commit of the following:

commit 11a1b7b6a75c9b05d2a8fb1385ed0aadcd20b42b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jun 12 17:00:43 2025 +0200

    MCA-4763 Added new internal openNewThread() function + bugfixing

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -221,6 +221,19 @@
             }
         }
 
+        async function openNewThread() {
+            try {
+                const response = await getLivechatSdk().getWidget().openNewThread();
+                if (response.success) {
+                    widgetApiCallback('openNewThread', null, response.data);
+                } else {
+                    widgetApiCallback('openNewThread', response.error, null);
+                }
+            } catch (e) {
+                widgetApiCallback('openNewThread', `Could not open new thread ${e.message}`, null);
+            }
+        }
+
         async function getActiveThread() {
             try {
                 const response = await getLivechatSdk().getActiveThread();
